--- a/.github/workflows/template-connect-popup-test-params.yml
+++ b/.github/workflows/template-connect-popup-test-params.yml
@@ -26,6 +26,10 @@ on:
         type: "boolean"
         required: false
         default: false
+      custom-connect-url:
+        description: "Optional custom URL for testing legacy versions of Connect npm with new po"
+        type: "string"
+        required: false
 
 jobs:
   web:
@@ -48,7 +52,8 @@ jobs:
 
       - name: Run connect popup test
         env:
-          URL: https://${{ inputs.DEV_SERVER_HOSTNAME }}/connect/${{ steps.extract_branch.outputs.branch }}/
+          #  When testing legacy custom-connect-url it will use connect version from npm legacy version with current popup.
+          URL: ${{ inputs.custom-connect-url || format('https://{0}/connect/{1}/', inputs.DEV_SERVER_HOSTNAME, steps.extract_branch.outputs.branch) }}
           TREZOR_CONNECT_SRC: https://${{ inputs.DEV_SERVER_HOSTNAME }}/connect/${{ steps.extract_branch.outputs.branch }}/
           CI_COMMIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
           CI_JOB_NAME: ${{ inputs.test-name }}-${{ github.run_attempt }}
