--- a/.github/workflows/suite-native_production_ci.yml
+++ b/.github/workflows/suite-native_production_ci.yml
@@ -20,6 +20,8 @@ jobs:
     name: Build and release iOS
     environment: production
     runs-on: ubuntu-latest
+    env:
+      EXPO_PUBLIC_ENVIRONMENT: production
     if: ${{ github.event.inputs.PLATFORM == 'iOS' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
@@ -46,6 +48,8 @@ jobs:
     name: Build and release Android
     environment: production
     runs-on: ubuntu-latest
+    env:
+      EXPO_PUBLIC_ENVIRONMENT: production
     if: ${{ github.event.inputs.PLATFORM == 'Android' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
