--- a/suite-native/config/package.json
+++ b/suite-native/config/package.json
@@ -13,7 +13,6 @@
         "@mobily/ts-belt": "^3.13.1",
         "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-types": "workspace:*",
-        "@suite-common/wallet-utils": "workspace:*",
-        "zod": "^3.22.3"
+        "@suite-common/wallet-utils": "workspace:*"
     }
 }
