--- a/.github/workflows/suite-native_production_ci.yml
+++ b/.github/workflows/suite-native_production_ci.yml
@@ -9,6 +9,7 @@ on:
           - iOS
           - Android
           - Both
+        description: Select platform to run build
         required: true
 
 concurrency:
@@ -20,8 +21,6 @@ jobs:
     name: Build and release iOS
     environment: production
     runs-on: ubuntu-latest
-    env:
-      EXPO_PUBLIC_ENVIRONMENT: production
     if: ${{ github.event.inputs.PLATFORM == 'iOS' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +36,7 @@ jobs:
       - name: Install libs
         run: yarn install
       - name: Build on EAS iOS
-        run: eas build
+        run: NODE_ENV=production eas build
           --platform ios
           --profile production
           --non-interactive
@@ -48,8 +47,6 @@ jobs:
     name: Build and release Android
     environment: production
     runs-on: ubuntu-latest
-    env:
-      EXPO_PUBLIC_ENVIRONMENT: production
     if: ${{ github.event.inputs.PLATFORM == 'Android' || github.event.inputs.PLATFORM == 'Both' }}
     steps:
       - uses: actions/checkout@v4
@@ -65,7 +62,7 @@ jobs:
       - name: Install libs
         run: yarn install
       - name: Build on EAS Android
-        run: eas build
+        run: NODE_ENV=production eas build
           --platform android
           --profile production
           --non-interactive
