--- a/suite-native/atoms/package.json
+++ b/suite-native/atoms/package.json
@@ -21,6 +21,7 @@
         "@trezor/styles": "workspace:*",
         "@trezor/theme": "workspace:*",
         "@trezor/utils": "workspace:*",
+        "expo-haptics": "^12.8.1",
         "expo-image": "1.10.6",
         "jotai": "1.9.1",
         "react": "18.2.0",
