--- a/.github/workflows/build-desktop-apps.yml
+++ b/.github/workflows/build-desktop-apps.yml
@@ -1,8 +1,18 @@
 name: "[Build] suite-desktop apps"
 
 on:
+  push:
+    branches:
+      - develop
+    paths-ignore:
+      - 'suite-native/**'
+      - 'docs/**'
+      - 'docker/**'
+      - 'ci/**'
+      - '.vscode/**'
+      - '.maestro/**'
   pull_request:
-    types: [opened, labeled]
+    types: [labeled]
   workflow_dispatch:
 
 
@@ -15,7 +25,7 @@ concurrency:
 
 jobs:
   suite-desktop:
-    if: (github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'build-desktop')) && github.repository == 'trezor/trezor-suite'
+    if: (github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'build-desktop') || (github.event_name == 'push' && github.ref == 'refs/heads/develop')) && github.repository == 'trezor/trezor-suite'
     name: Build suite-desktop-${{ matrix.platform }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
@@ -66,7 +76,7 @@ jobs:
           retention-days: 3
 
   suite-desktop-win:
-    if: (github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'build-desktop')) && github.repository == 'trezor/trezor-suite'
+    if: (github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'build-desktop') || (github.event_name == 'push' && github.ref == 'refs/heads/develop')) && github.repository == 'trezor/trezor-suite'
     name: Build suite-desktop-win
     runs-on: ubuntu-latest
     timeout-minutes: 20
