--- a/.github/workflows/connect-dev-release-test.yml
+++ b/.github/workflows/connect-dev-release-test.yml
@@ -22,6 +22,9 @@ on:
       - "packages/transport/**"
       - "packages/utxo-lib/**"
       - "packages/utils/**"
+      - "packages/connect-popup/**"
+      - "packages/connect-analytics/**"
+      - "packages/connect-analytuiics/**"
       - "submodules/trezor-common/**"
       - "yarn.lock"
       - ".github/workflows/connect-dev-release-test.yml"
