--- a/.github/workflows/connect-test.yml
+++ b/.github/workflows/connect-test.yml
@@ -5,8 +5,6 @@ on:
   schedule:
     # Runs at midnight UTC every day at 01:00 AM CET
     - cron: "0 0 * * *"
-  push:
-    branches: [npm-release/*, release/*]
   pull_request:
     paths:
       - "packages/blockchain-link/**"
@@ -26,6 +24,7 @@ on:
       - ".github/workflows/template-connect-test-params.yml"
       - "docker/docker-connect-test.sh"
       - "docker/docker-compose.connect-test.yml"
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-$${{ github.head_ref || github.run_id }}
