--- a/.github/workflows/connect-web-e2e-test.yml
+++ b/.github/workflows/connect-web-e2e-test.yml
@@ -4,8 +4,6 @@ on:
   schedule:
     # Runs at midnight UTC every day at 01:00 AM CET
     - cron: "0 0 * * *"
-  push:
-    branches: [npm-release/*, release/*]
   pull_request:
     paths:
       - "packages/connect/**"
@@ -13,6 +11,7 @@ on:
       - "packages/utils/**"
       - ".github/workflows/connect-web-e2e-test.yml"
       - "yarn.lock"
+  workflow_dispatch:
 
 jobs:
   connect-web-e2e:
