--- a/.github/workflows/build-test-suite-web-nightly.yaml
+++ b/.github/workflows/build-test-suite-web-nightly.yaml
@@ -44,25 +44,45 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version-file: '.nvmrc'
+
+            - name: Extract branch name
+              id: extract_branch
+              run: |
+                  echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
+            - name: Extract commit message
+              id: extract_commit_message
+              run: |
+                  if [ "${{ github.event_name }}" == "pull_request" ]; then
+                    git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge:
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  else
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  fi
+
             - name: Run e2e tests
               env:
                   COMPOSE_FILE: ./docker/docker-compose.suite-ci.yml
                   ## Tells Cypress where is the index of application
                   CYPRESS_ASSET_PREFIX: /web
                   CYPRESS_baseUrl: https://dev.suite.sldev.cz/suite-web/
-
                   ## should tests do snapshot testing
                   # cypress open todo. temporarily turned off (messaging system)
-                  CYPRESS_SNAPSHOT: 0
+                  CYPRESS_SNAPSHOT: false
                   ## reporter url
                   TRACK_SUITE_URL: https://track-suite-ff9ad9f5b4f6.herokuapp.com
                   ## when debugging or developing tests it does not make sense to have retries,
                   ## in other cases retries are useful to avoid occasional failures due to flaky tests
-                  ALLOW_RETRY: 1
+                  ALLOW_RETRY: true
                   TEST_GROUP: ${{ matrix.TEST_GROUP }}
                   CYPRESS_TEST_URLS: develop
                   CYPRESS_USE_TREZOR_USER_ENV_BRIDGE: ${{ matrix.CYPRESS_USE_TREZOR_USER_ENV_BRIDGE }}
-                  CYPRESS_updateSnapshots: 0
+                  CYPRESS_updateSnapshots: false
+                  CI_JOB_ID: ${{ github.run_id }}
+                  CI_COMMIT_SHA: ${{ github.sha }}
+                  CI_JOB_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+                  CI_COMMIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+                  CI_COMMIT_MESSAGE: ${{steps.extract_commit_message.outputs.message }}
               run: |
                   yarn install --immutable
                   docker-compose pull
@@ -108,25 +128,45 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version-file: '.nvmrc'
+
+            - name: Extract branch name
+              id: extract_branch
+              run: |
+                  echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
+            - name: Extract commit message
+              id: extract_commit_message
+              run: |
+                  if [ "${{ github.event_name }}" == "pull_request" ]; then
+                    git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge:
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  else
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  fi
+
             - name: Run e2e migration tests
               env:
                   COMPOSE_FILE: ./docker/docker-compose.suite-ci.yml
                   ## Tells Cypress where is the index of application
                   CYPRESS_ASSET_PREFIX: /web
                   CYPRESS_baseUrl: https://dev.suite.sldev.cz/suite-web/
-
                   ## should tests do snapshot testing
                   # cypress open todo. temporarily turned off (messaging system)
-                  CYPRESS_SNAPSHOT: 0
+                  CYPRESS_SNAPSHOT: false
                   ## reporter url
                   TRACK_SUITE_URL: https://track-suite-ff9ad9f5b4f6.herokuapp.com
                   ## when debugging or developing tests it does not make sense to have retries,
                   ## in other cases retries are useful to avoid occasional failures due to flaky tests
-                  ALLOW_RETRY: 1
+                  ALLOW_RETRY: true
                   TEST_GROUP: ${{ matrix.TEST_GROUP }}
                   CYPRESS_TEST_URLS: release/22.5 develop
                   CYPRESS_USE_TREZOR_USER_ENV_BRIDGE: 1
-                  CYPRESS_updateSnapshots: 0
+                  CYPRESS_updateSnapshots: false
+                  CI_JOB_ID: ${{ github.run_id }}
+                  CI_COMMIT_SHA: ${{ github.sha }}
+                  CI_JOB_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+                  CI_COMMIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+                  CI_COMMIT_MESSAGE: ${{steps.extract_commit_message.outputs.message }}
               run: |
                   yarn install --immutable
                   docker-compose pull
@@ -190,26 +230,45 @@ jobs:
               with:
                   node-version-file: '.nvmrc'
 
+            - name: Extract branch name
+              id: extract_branch
+              run: |
+                  echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
+            - name: Extract commit message
+              id: extract_commit_message
+              run: |
+                  if [ "${{ github.event_name }}" == "pull_request" ]; then
+                    git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge:
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  else
+                    echo "message=$(git log --no-merges -1 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+                  fi
+
             - name: Run e2e canary fw tests
               env:
                   COMPOSE_FILE: ./docker/docker-compose.suite-ci.yml
                   ## Tells Cypress where is the index of application
                   CYPRESS_ASSET_PREFIX: /web
                   CYPRESS_baseUrl: https://dev.suite.sldev.cz/suite-web/
-
                   ## should tests do snapshot testing
                   # cypress open todo. temporarily turned off (messaging system)
-                  CYPRESS_SNAPSHOT: 0
+                  CYPRESS_SNAPSHOT: false
                   ## reporter url
                   TRACK_SUITE_URL: https://track-suite-ff9ad9f5b4f6.herokuapp.com
                   ## when debugging or developing tests it does not make sense to have retries,
                   ## in other cases retries are useful to avoid occasional failures due to flaky tests
-                  ALLOW_RETRY: 1
+                  ALLOW_RETRY: true
                   TEST_GROUP: ${{ matrix.TEST_GROUP }}
                   CYPRESS_TEST_URLS: develop
                   CYPRESS_USE_TREZOR_USER_ENV_BRIDGE: 1
-                  CYPRESS_updateSnapshots: 0
+                  CYPRESS_updateSnapshots: false
                   FIRMWARE: 2-main
+                  CI_JOB_ID: ${{ github.run_id }}
+                  CI_COMMIT_SHA: ${{ github.sha }}
+                  CI_JOB_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+                  CI_COMMIT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+                  CI_COMMIT_MESSAGE: ${{steps.extract_commit_message.outputs.message }}
               run: |
                   yarn install --immutable
                   docker-compose pull
