--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -29,6 +29,7 @@
         "copy-webpack-plugin": "^12.0.2",
         "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
+        "next-mdx-remote": "^4.4.1",
         "next-themes": "^0.2.1",
         "nextra": "^2.13.4",
         "nextra-theme-docs": "^2.13.4",
