--- a/docker/docker-compose.connect-webextension-ci.yml
+++ b/docker/docker-compose.connect-webextension-ci.yml
@@ -3,11 +3,9 @@ services:
   trezor-user-env-unix:
     image: ghcr.io/trezor/trezor-user-env
     environment:
-      - DISPLAY=$DISPLAY
-      - QT_X11_NO_MITSHM=1
-      - LOCAL_USER_ID=$LOCAL_USER_ID
-    volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - SDL_VIDEODRIVER=dummy
+      - XDG_RUNTIME_DIR=/var/tmp
+    # network_mode: bridge # this makes docker reuse existing networks
 
   test-run:
     image: mcr.microsoft.com/playwright:v1.41.2-jammy
@@ -18,15 +16,14 @@ services:
     network_mode: service:trezor-user-env-unix
     environment:
       - URL=$URL
-      - HEADLESS=$HEADLESS
-      - DISPLAY=$DISPLAY
-      - LOCAL_USER_ID=$LOCAL_USER_ID
-      - PWDEBUG=console
+      - HEADLESS=true
       - CI_JOB_URL=$CI_JOB_URL
       - CI_COMMIT_BRANCH=$CI_COMMIT_BRANCH
       - CI_JOB_NAME=$CI_JOB_NAME
-    working_dir: /trezor-suite
+      - TEST_FILE=$TEST_FILE
+      - IS_WEBEXTENSION=$IS_WEBEXTENSION
+      - TREZOR_CONNECT_SRC=$TREZOR_CONNECT_SRC
+    working_dir: /e2e
     command: bash -c "npx playwright install && yarn workspace @trezor/connect-examples test:e2e"
     volumes:
-      - ../:/trezor-suite
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - ../:/e2e
