--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -54,6 +54,7 @@
         "@suite-native/module-onboarding": "workspace:*",
         "@suite-native/module-passphrase": "workspace:*",
         "@suite-native/module-receive": "workspace:*",
+        "@suite-native/module-send": "workspace:*",
         "@suite-native/module-settings": "workspace:*",
         "@suite-native/navigation": "workspace:*",
         "@suite-native/notifications": "workspace:*",
